--- a/resources/mae_inventario.ui
+++ b/resources/mae_inventario.ui
@@ -268,7 +268,7 @@
                               <object class="GtkLabel" id="label3">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="label" translatable="yes">Nombre Local:</property>
+                                <property name="label" translatable="yes">Descripción General:</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -277,7 +277,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkEntry" id="ent_descripcion">
+                              <object class="GtkEntry" id="ent_descripcion_global">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="invisible_char">●</property>
@@ -321,7 +321,7 @@
                               <object class="GtkLabel" id="label8">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="label" translatable="yes">Descripción Corta:</property>
+                                <property name="label" translatable="yes">Descripción Local:</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -330,7 +330,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkEntry" id="ent_descrip">
+                              <object class="GtkEntry" id="ent_descripcion_local">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="invisible_char">●</property>
