--- a/resources/mae_inventario.ui
+++ b/resources/mae_inventario.ui
@@ -18,7 +18,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="xalign">0</property>
-                <property name="pixbuf">../images/inventario_banner.png</property>
+                <property name="pixbuf">../images/curvas_degradado_banner.png</property>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -154,7 +154,7 @@
                             </child>
                           </object>
                           <packing>
-                            <property name="expand">False</property>
+                            <property name="expand">True</property>
                             <property name="fill">False</property>
                             <property name="position">1</property>
                           </packing>
@@ -196,7 +196,7 @@
                             </child>
                           </object>
                           <packing>
-                            <property name="expand">False</property>
+                            <property name="expand">True</property>
                             <property name="fill">False</property>
                             <property name="position">2</property>
                           </packing>
