--- a/resources/fin_recibo.ui
+++ b/resources/fin_recibo.ui
@@ -298,12 +298,13 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkEntry" id="entry2">
+                              <object class="GtkEntry" id="ent_caja">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="invisible_char">●</property>
+                                <property name="secondary_icon_stock">gtk-find</property>
                                 <property name="primary_icon_activatable">False</property>
-                                <property name="secondary_icon_activatable">False</property>
+                                <property name="secondary_icon_activatable">True</property>
                                 <property name="primary_icon_sensitive">True</property>
                                 <property name="secondary_icon_sensitive">True</property>
                               </object>
@@ -343,8 +344,9 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="invisible_char">●</property>
+                                <property name="secondary_icon_stock">gtk-find</property>
                                 <property name="primary_icon_activatable">False</property>
-                                <property name="secondary_icon_activatable">False</property>
+                                <property name="secondary_icon_activatable">True</property>
                                 <property name="primary_icon_sensitive">True</property>
                                 <property name="secondary_icon_sensitive">True</property>
                               </object>
@@ -646,9 +648,9 @@
                                     <property name="border_width">3</property>
                                     <property name="spacing">5</property>
                                     <child>
-                                      <object class="GtkButton" id="button1">
+                                      <object class="GtkButton" id="btn_save">
                                         <property name="visible">True</property>
-                                        <property name="can_focus">True</property>
+                                        <property name="can_focus">False</property>
                                         <property name="receives_default">True</property>
                                         <property name="tooltip_text" translatable="yes">Guardar la información</property>
                                         <child>
@@ -666,9 +668,9 @@
                                       </packing>
                                     </child>
                                     <child>
-                                      <object class="GtkButton" id="button2">
+                                      <object class="GtkButton" id="btn_cancel">
                                         <property name="visible">True</property>
-                                        <property name="can_focus">True</property>
+                                        <property name="can_focus">False</property>
                                         <property name="receives_default">True</property>
                                         <property name="tooltip_text" translatable="yes">Cancelar el proceso</property>
                                         <child>
