Se incluye un textview que muestra los datos reexpresados del documento pendiente en el treeview.
Limpiamos un poco el código.

--- a/resources/fin_recibo.ui
+++ b/resources/fin_recibo.ui
@@ -392,10 +392,9 @@
                         <property name="can_focus">False</property>
                         <property name="left_padding">12</property>
                         <child>
-                          <object class="GtkHPaned" id="hpaned1">
+                          <object class="GtkHBox" id="hbox10">
                             <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="position">500</property>
+                            <property name="can_focus">False</property>
                             <child>
                               <object class="GtkVBox" id="box_doc1">
                                 <property name="visible">True</property>
@@ -418,7 +417,7 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkHBox" id="hbox10">
+                                  <object class="GtkHBox" id="hbox14">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="spacing">5</property>
@@ -552,18 +551,30 @@
                                 </child>
                               </object>
                               <packing>
-                                <property name="resize">True</property>
-                                <property name="shrink">False</property>
+                                <property name="expand">True</property>
+                                <property name="fill">True</property>
+                                <property name="position">0</property>
                               </packing>
                             </child>
                             <child>
                               <object class="GtkVBox" id="box_reexpresar">
+                                <property name="width_request">100</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <child>
-                                  <object class="GtkTextView" id="tv_reexpresados">
+                                  <object class="GtkScrolledWindow" id="scrolledwindow1">
                                     <property name="visible">True</property>
-                                    <property name="can_focus">False</property>
+                                    <property name="can_focus">True</property>
+                                    <property name="hscrollbar_policy">automatic</property>
+                                    <property name="vscrollbar_policy">automatic</property>
+                                    <child>
+                                      <object class="GtkTextView" id="tv_reexpresados">
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">False</property>
+                                        <property name="editable">False</property>
+                                        <property name="left_margin">2</property>
+                                      </object>
+                                    </child>
                                   </object>
                                   <packing>
                                     <property name="expand">True</property>
@@ -573,8 +584,9 @@
                                 </child>
                               </object>
                               <packing>
-                                <property name="resize">True</property>
-                                <property name="shrink">True</property>
+                                <property name="expand">True</property>
+                                <property name="fill">True</property>
+                                <property name="position">1</property>
                               </packing>
                             </child>
                           </object>
